fix align

--- a/src/components/pages/ui/Modal/style.module.scss
+++ b/src/components/pages/ui/Modal/style.module.scss
@@ -46,7 +46,7 @@
 			display: flex;
 			flex-direction: row;
 			gap: 17px;
-			ign-items: center;
+			align-items: center;
 
 			span{
 				color: #FFF;
@@ -254,7 +254,7 @@
 			display: flex;
 			flex-direction: row;
 			gap: 17px;
-			ign-items: center;
+			align-items: center;
 
 			span{
 				color: #FFF;
